fix mocktable
