# swagger.json
@@ -587,7 +587,10 @@
           "200": {
             "description": "OK",
             "schema": {
-              "$ref": "#/definitions/plans.Plan"
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/plans.Plan"
+              }
             }
           },
           "400": {
@@ -618,50 +621,6 @@
             "name": "day",
             "in": "path",
             "required": true
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK",
-            "schema": {
-              "$ref": "#/definitions/plans.Plan"
-            }
-          },
-          "400": {
-            "description": "Bad Request",
-            "schema": {}
-          }
-        }
-      },
-      "put": {
-        "description": "Update a plan by user and day",
-        "consumes": ["application/json"],
-        "produces": ["application/json"],
-        "tags": ["plans"],
-        "summary": "Update a plan by user and day",
-        "parameters": [
-          {
-            "type": "string",
-            "description": "User ID",
-            "name": "user_id",
-            "in": "path",
-            "required": true
-          },
-          {
-            "type": "string",
-            "description": "Day of week",
-            "name": "day",
-            "in": "path",
-            "required": true
-          },
-          {
-            "description": "Update Plan",
-            "name": "plan",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/plans.UpdatePlanDto"
-            }
           }
         ],
         "responses": {
@@ -794,6 +753,52 @@
         "responses": {
           "204": {
             "description": "No Content"
+          },
+          "400": {
+            "description": "Bad Request",
+            "schema": {}
+          }
+        }
+      }
+    },
+    "/plans/{user_id}/{day}": {
+      "put": {
+        "description": "Update a plan by user and day",
+        "consumes": ["application/json"],
+        "produces": ["application/json"],
+        "tags": ["plans"],
+        "summary": "Update a plan by user and day",
+        "parameters": [
+          {
+            "type": "string",
+            "description": "User ID",
+            "name": "user_id",
+            "in": "path",
+            "required": true
+          },
+          {
+            "type": "string",
+            "description": "Day of week",
+            "name": "day",
+            "in": "path",
+            "required": true
+          },
+          {
+            "description": "Update Plan",
+            "name": "plan",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/plans.UpdatePlanDto"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "$ref": "#/definitions/plans.Plan"
+            }
           },
           "400": {
             "description": "Bad Request",
@@ -1254,9 +1259,6 @@
           }
         },
         "typeofplan": {
-          "type": "string"
-        },
-        "userid": {
           "type": "string"
         }
       }
